BOSH: Applied various minor IDE suggestions